# duckdb-zarr

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  description.yml  pyproject.toml
.cargo/: config.toml
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md  design.md
scripts/: generate_fixtures.py
src/: lib.rs  read_zarr.rs  read_zarr_groups.rs  read_zarr_metadata.rs  replacement_scan.rs  wasm_lib.rs
src/zarr_reader/: meta.rs  mod.rs  scan.rs  types.rs
test/: conftest.py  test_http_integration.py
test/sql/: duckdb_zarr.test  read_zarr.test  read_zarr_v2.test  realistic_queries.test
