[package]
name = "duckdb_zarr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "duckdb_zarr"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "=1.10502.0", features = ["loadable-extension"] }
# blosc excluded: snappy_src v0.2.5 build fails on macOS Tahoe (Darwin 25 / SDK 26.x).
# Zarr v2 stores that use gzip/zstd compression read correctly without it.
# Blosc-compressed v2 stores are unsupported until upstream is fixed.
zarrs = { version = "0.23", default-features = false, features = [
    "ndarray",
    "filesystem",
    "gzip",
    "zstd",
    "crc32c",
    "sharding",
    "transpose",
] }
ndarray = "0.17"
serde_json = "1"
base64 = "0.22"
